--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>University of Agriculture, Faisalabad - Result Portal</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>University of Agriculture, Faisalabad</h1>
+  <h2>Check Result</h2>
+  
+  <input type="text" id="regNo" placeholder="Enter your registration number">
+  <button onclick="checkResult()">Check</button>
 
+  <script src="script.js"></script>
+</body>
+</html>
